# ninjecto

./: .gitignore  Jenkinsfile  MANIFEST.in  README.rst  TODO  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
doc/: conf.py  developer.rst  index.rst  requirements.txt
doc/_templates/: layout.html
examples/basic/: input.md.tpl  ninjeconf.py  values.yaml
lib/ninjecto/: __init__.py  __main__.py  args.py  config.py  core.py  inputs.py  local.py  schema.py  values.py
lib/ninjecto/data/: config.toml  config.yaml
lib/ninjecto/plugins/: loader.py
lib/ninjecto/plugins/filters/: __init__.py  comment.py  quote.py  read.py
lib/ninjecto/plugins/namespaces/: __init__.py  env.py  git.py  vault.py
lib/ninjecto/utils/: __init__.py  command.py  dictionary.py  git.py  iso8601.py  types.py
test/: pytest.ini  requirements.txt  test_basic.py  test_version.py
test/config/: config.yaml  config_brackets.yaml
test/templates/: basic.yaml.tpl  brackets.yaml.tpl  nested.yaml.tpl
